components/layout/Layout.module.scss
@use "/styles/lib/mixins.scss";

.layout {
  align-items: center;
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  justify-content: center;
  min-height: 100vh;
  position: relative;
  width: 100%;

  /* Avoid Chrome to see Safari hack */
  @supports (-webkit-touch-callout: none) {
    /* The hack for Safari */
    min-height: 100dvh;

    @media all and (display-mode: standalone) {
      min-height: 100vh;
    }
  }
}

.header {
  align-items: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
  position: absolute;
  right: clamp(22px, 8vw, 44px);
  top: calc(env(safe-area-inset-top) + 44px);
  z-index: 1;

  :global(.orientation_landscape_secondary) & {
    right: env(safe-area-inset-right, clamp(22px, 8vw, 44px));
  }

  a {
    color: var(--color-logo);
    font-size: 0;
    transition: color 0.2s ease-in-out;
  }

  .logo {
    margin-bottom: 1em;
  }

  .test {
    color: #fff;
  }

  a:hover,
  a:focus-visible {
    color: var(--color-logo-hover);
    outline: none;
  }

  @include mixins.device-with-imprecise-input {
    a {
      padding: 4px;

      svg {
        //transform: scale(1.25);
      }
    }
  }
}

